plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version "8.1.0"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url = "https://maven.mohistmc.com/" }
    maven { url = "https://repo.papermc.io/repository/maven-public/" }
    maven { url = "https://jitpack.io" }
    maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview"]
    options.encoding = 'UTF-8'
}


dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-jul:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-iostreams:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
    implementation 'com.google.code.gson:gson:2.10'
    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'net.sf.trove4j:core:3.1.0'
    implementation 'se.llbit:jo-nbt:1.3.0'
    implementation 'net.md-5:brigadier:1.0.16-SNAPSHOT'
    implementation 'org.fusesource.jansi:jansi:2.4.0'
    implementation 'org.jline:jline-reader:3.23.0'
    implementation 'org.jline:jline-terminal-jansi:3.23.0'
    implementation 'com.google.code.findbugs:findbugs-annotations:3.0.1'
    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
    implementation 'jline:jline:2.14.6'
    implementation 'org.slf4j:slf4j-api:2.0.6'
    implementation 'org.slf4j:slf4j-simple:2.0.6'
    implementation 'org.slf4j:jcl-over-slf4j:2.0.5'

    implementation 'io.netty:netty-buffer:4.1.82.Final'
    implementation 'io.netty:netty-codec:4.1.82.Final'
    implementation 'io.netty:netty-codec-http:4.1.82.Final'
    implementation 'io.netty:netty-handler:4.1.90.Final'
    implementation 'io.netty:netty-resolver:4.1.90.Final'
    implementation 'io.netty:netty-transport:4.1.90.Final'
    implementation 'io.netty:netty-transport-classes-epoll:4.1.82.Final'
    implementation 'io.netty:netty-transport-native-unix-common:4.1.90.Final'
    implementation 'io.netty:netty-codec-haproxy:4.1.90.Final'
    implementation 'io.netty:netty-resolver-dns:4.1.90.Final'

    implementation 'org.apache.maven:maven-resolver-provider:3.9.0'
    implementation 'org.apache.maven.resolver:maven-resolver-connector-basic:1.9.7'
    implementation 'org.apache.maven.resolver:maven-resolver-transport-http:1.9.7'

    implementation 'net.minecrell:terminalconsoleappender:1.3.0'
    implementation 'mysql:mysql-connector-java:8.0.32'
    implementation 'it.unimi.dsi:fastutil:8.5.12'
    implementation 'com.lmax:disruptor:3.4.4'
    implementation "com.mohistmc.yaml:yaml:0.4"
}

tasks.jar {
    manifest {
        attributes(
                "Main-Class": "net.md_5.bungee.Bootstrap",
                "Multi-Release": "true"
        )
    }
}

tasks.shadowJar {
    exclude '**/Log4j2Plugins.dat'
}